# MyProjectManager

./: .gitattributes  .gitignore  LICENSE  README.md  README_EN.md  install.ps1  package_product.py
.github/workflows/: release.yml
docs/: MANUAL.md  MANUAL_EN.md  PACKAGING.md  RELEASE-CONTENTS.md
mcp-server-go/: go.mod  go.sum  test_map.json
mcp-server-go/cmd/server/: main.go  main_fake.rs
mcp-server-go/configs/: persona_library.json
mcp-server-go/internal/core/: database.go  detector.go  memory.go  memory_test.go  models.go
mcp-server-go/internal/services/: ast_indexer.go  ast_indexer_test.go  discovery_service.go  search_engine.go
mcp-server-go/internal/services/persona_editor/: Cargo.toml  build_errors.txt  build_log.txt  editor.go  tauri.conf.json
mcp-server-go/internal/services/persona_editor/src/: discovery.rs  lib.rs  main.rs  models.rs  persona.rs  prompt.rs
mcp-server-go/internal/services/persona_editor/ui/: index.html
mcp-server-go/internal/tools/: analysis_tools.go  doc_tools.go  enhance_tools.go  enhance_tools_test.go  intelligence_tools.go  map_renderer.go  memory_tools.go  prompt_tools.go  resources.go  search_tools.go  skill_tools.go  system_tools.go  task_chain_v2.go  task_tools.go  (+1 more)
mcp-server-go/skills/: README.md
scripts/: build-cross-platform.sh  build-release.ps1  build-unix.sh  build-windows.ps1  test-packaging.ps1
user-manual/: 00-INDEX.md  01-QUICK-START.md  02-ARCHITECTURE.md  03-MANAGER.md  04-CODE-PARSER.md  05-DATABASE-MEMORY.md  06-ADVANCED.md  07-VIBE-CODING.md  08-TOOLS.md  CASE_STUDY.md  COMPLETE-MANUAL-CONCISE.md
(+24 files in other folders)
