[package]
name = "persona-editor"
version = "0.1.0"
description = "Persona Editor for MCP Expert Server"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp"
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
